--- a/index.html
+++ b/index.html
@@ -1,20 +1,1 @@
-
-<html> 
-  <head> 
-    <title>My Cv</title>
-  </head>
-  <body>   
-    <div class="content"> 
-      <div class="title-section">Welcome to my CV</div>
-    </div>
-    <button class="button-disc"> <i class="icon__youtube"> </i><span class="text-button">Yt </span></button>
-    <h1>Cosmin Negrut </h1>
-    <h2>Junior Web Developer </h2>
-    <h3>Info about me </h3>
-    <div class="box-shadow"> 
-      <p>I want to become a Web Developer because I wish to innovate and design.</p>
-      <p>I like coding and I want to become a Full Stack Developer </p>
-    </div>
-    <button class="button-pill"><i class="icon__download"> </i><span class="text-button">Get my CV</span></button>
-  </body>
-</html>
+<!DOCTYPE html ><html><head> <title>My Cv</title><link rel="stylesheet" href="style.css"/><meta name="viewport" content="width=device-width, initial-scale=1.0"></head><body>   <div class="content"> <div class="grid"><div class="column" span="row"><div class="title-section">Welcome to my CV</div></div><div class="column" span="row"><button class="button-disc"> <i class="icon__youtube"> </i><span class="text-button">Yt </span></button></div><div class="column" span="row"><h1>Cosmin Negrut</h1></div><div class="column" span="row"><h2>Junior Web Developer </h2></div><div class="column" span="row"><h3>Info about me </h3></div><div class="column" span="row"><div class="box-shadow"> <p>I want to become a Web Developer because I wish to innovate and design.</p><p>I like coding and I want to become a Full Stack Developer </p></div></div><div class="column" span="row"><button class="button-pill"><i class="icon__download"> </i><span class="text-button">Get my CV </span></button></div><div class="column" span="row"><button class="disc"> <i class="icon__arrow-down"> </i><span class="text-button">AD</span></button></div></div></div></body></html>
