--- a/index.html
+++ b/index.html
@@ -8,31 +8,33 @@
     <div class="content"> 
       <div class="grid">
         <div class="column" span="row">
-          <div class="title-section">Welcome to my CV</div>
-        </div>
-        <div class="column" span="row">
-          <button class="button-disc"> <i class="icon__youtube"> </i><span class="text-button">Yt </span></button>
-        </div>
-        <div class="column" span="row">
-          <h1>Cosmin Negrut</h1>
-        </div>
-        <div class="column" span="row">
-          <h2>Junior Web Developer </h2>
-        </div>
-        <div class="column" span="row">
-          <h3>Info about me </h3>
-        </div>
-        <div class="column" span="row">
-          <div class="box-shadow"> 
-            <p>I want to become a Web Developer because I wish to innovate and design.</p>
-            <p>I like coding and I want to become a Full Stack Developer </p>
+          <div class="title-section-wrapper">
+            <div class="title-section">Welcome to my CV</div>
           </div>
         </div>
         <div class="column" span="row">
-          <button class="button-pill"><i class="icon__download"> </i><span class="text-button">Get my CV </span></button>
+          <button class="button-disc-red"> <i class="icon-youtube"> </i></button>
         </div>
         <div class="column" span="row">
-          <button class="disc"> <i class="icon__arrow-down"> </i><span class="text-button">AD</span></button>
+          <h1 class="about-me-main-title">Cosmin Negrut</h1>
+        </div>
+        <div class="column" span="row">
+          <h2 class="about-me-subtitle">Junior Web Developer </h2>
+        </div>
+        <div class="column" span="row">
+          <h3 class="about-me-info">Info about me </h3>
+        </div>
+        <div class="column" span="row">
+          <div class="box-shadow"> 
+            <p class="description">I want to become a Web Developer because I wish to innovate and design.</p>
+            <p class="description">I like coding and I want to become a Full Stack Developer </p>
+          </div>
+        </div>
+        <div class="column" span="row">
+          <button class="button-pill"><i class="icon-download"> </i><span class="text-button">Get my CV </span></button>
+        </div>
+        <div class="column" span="row">
+          <button class="button-disc-green"> <i class="icon-arrow-down"> </i></button>
         </div>
       </div>
     </div>
